[gd_scene load_steps=2 format=3 uid="uid://bacjdgxvleijr"]

[ext_resource type="Script" path="res://Entities/Enemy/Behavior/EnemySpawnHandler.gd" id="1_cv7oc"]

[node name="EnemySpawnHandler" type="Node3D"]
script = ExtResource("1_cv7oc")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="DecoyTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="FilterSpawnerTimer" type="Timer" parent="."]
wait_time = 15.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DecoyTimer" to="." method="_on_decoy_timer_timeout"]
[connection signal="timeout" from="FilterSpawnerTimer" to="." method="_on_filter_spawner_timer_timeout"]
